--- a/ReactiveFlickr/packages.config
+++ b/ReactiveFlickr/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="reactiveui" version="6.0.5" targetFramework="net45" />
-  <package id="reactiveui-core" version="6.0.5" targetFramework="net45" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
-  <package id="Splat" version="1.3.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net451+win81+wpa81" />
+  <package id="reactiveui" version="6.0.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="reactiveui-core" version="6.0.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-net451+win81+wpa81" />
+  <package id="Splat" version="1.3.3" targetFramework="portable-net451+win81+wpa81" />
 </packages>
