--- a/Mobile/packages.config
+++ b/Mobile/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="wpa81" />
   <package id="reactiveui" version="6.0.5" targetFramework="wpa81" />
   <package id="reactiveui-core" version="6.0.5" targetFramework="wpa81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="wpa81" />
