--- a/Mobile/Properties/AndroidManifest.xml
+++ b/Mobile/Properties/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Mobile.Mobile">
 	<uses-sdk />
 	<application android:label="Mobile"></application>
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
