Changes Android namespace to ReactiveFlickr.Android
For consistency with other projects in the solution, the Android
namespace is now ReactiveFlickr.Android. Just like the desktop app,
the app name is ReactiveFlickr.

--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{B636D209-45B9-4058-B8D6-1625170E1ED5}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Mobile</RootNamespace>
+    <RootNamespace>ReactiveFlickr.Mobile</RootNamespace>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
