--- a/Mobile/Properties/AndroidManifest.xml
+++ b/Mobile/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Mobile.Mobile">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ReactiveFlickr.Mobile">
 	<uses-sdk />
-	<application android:label="Mobile"></application>
+	<application android:label="ReactiveFlickr"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
