Android app uses Holo.Light.DarkActionBar theme

--- a/Mobile/Mobile.csproj
+++ b/Mobile/Mobile.csproj
@@ -78,6 +78,7 @@
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\layout\ImageItem.axml" />
+    <AndroidResource Include="Resources\values\Themes.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
