Extract out the DataTemplate into its own UserControl

--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -74,6 +74,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="ImageTileView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -84,6 +88,9 @@
     </Compile>
     <Compile Include="BitmapSourceConverter.cs" />
     <Compile Include="BoolToVisibilityConverter.cs" />
+    <Compile Include="ImageTileView.xaml.cs">
+      <DependentUpon>ImageTileView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
